--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
 </head>
 
 <body>
-    <h1>Hello Adalab</h1>
-    <p>This is the first page I made at Adalab.</p>
-    <p>这是为<a href="https://www.adalab.cn"><img src="https://www.adalab.cn/images/adalab.png"></a>挑战赛制作的网站。</p> 
-    <p>This is the first page I made at Adalab.start</p>
-    <h1>Hello Adalab——paragraph1</h1>
-    <p>This is the first page I made at Adalab.The first！ paragraph.</p>
-    <h2>Hello Adalab——paragraph2</h2>
-    <p>This is the first page I made at Adalab.The second！ paragraph.</p>
-    <h3>Hello Adalab——paragraph3</h3>
-    <p>This is the first page I made at Adalab.The third！ paragraph.</p>
-    
+  <header>
+      <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Finews.gtimg.com%2Fnewsapp_match%2F0%2F11310183870%2F0.jpg&refer=http%3A%2F%2Finews.gtimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1648129736&t=39504510ded5ff3af9d13037e608996a"></img>
+  </header>
+  <main>
+    <aside>
+        <ul>
+            <a href="https://github.com/signinUser-0222/signUser-0222.github.io/edit/main/bilibili.html">index</a>
+        </ul>
+    </aside>
+    <article>
+        <h1>Hello Adalab</h1>
+        <p>This is the first page I made at Adalab.</p>
+        <p>这是为<a href="https://www.adalab.cn"><img src="https://www.adalab.cn/images/adalab.png"></a>挑战赛制作的网站。</p> 
+        <p>This is the first page I made at Adalab.start</p>
+        <h1>Hello Adalab——paragraph1</h1>
+        <p>This is the first page I made at Adalab.The first！ paragraph.</p>
+        <h2>Hello Adalab——paragraph2</h2>
+        <p>This is the first page I made at Adalab.The second！ paragraph.</p>
+        <h3>Hello Adalab——paragraph3</h3>
+        <p>This is the first page I made at Adalab.The third！ paragraph.</p>
+    </article>
+  </main>
+  <footer>
+    <a href="https://www.zhihu.com/people/wu-liang-fan-ben-ben" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
+  </footer>   
 </body>
 
 </html>
