--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <aside>
         <ul>
-            <a href="https://github.com/signinUser-0222/signUser-0222.github.io/edit/main/bilibili.html">index</a>
+            <a href="https://github.com/signinUser-0222/signUser-0222.github.io/edit/main/bilibili.html">bilibili</a>
         </ul>
     </aside>
     <article>
