--- a/bilibili.html
+++ b/bilibili.html
@@ -14,7 +14,7 @@
   <main>
     <aside>
         <ul>
-            <a href="https://github.com/signinUser-0222/signUser-0222.github.io/edit/main/index.html">index</a>
+            <a href="index.html">index</a>
         </ul>
     </aside>
     <article>
@@ -22,7 +22,7 @@
         <p>This is the first page I made at Adalab.</p>
         <p>这是为<a href="https://www.adalab.cn"><img src="https://www.adalab.cn/images/adalab.png"></a>挑战赛制作的网站。</p>
         <iframe src="//player.bilibili.com/player.html?aid=376937797&bvid=BV1qo4y1Q7S5&cid=377772881&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-        <a href="https://github.com/signinUser-0222/signUser-0222.github.io/edit/main/index.html">返回首页</a>
+        <a href="index.html">返回首页</a>
     </article>
   </main>
   <footer>
