--- a/bilibili.html
+++ b/bilibili.html
@@ -7,6 +7,7 @@
     <title>我的个人网站_page2</title>
     <link href="https://www.adalab.cn/admission.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <script src="thumbnail.js"></script>
 </head>
 
 <body>
