--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   </main>
   <footer>
     <a href="https://www.zhihu.com/people/wu-liang-fan-ben-ben" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
-  </footer>   
+  </footer>
+  <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Finews.gtimg.com%2Fnewsapp_match%2F0%2F11310183870%2F0.jpg&refer=http%3A%2F%2Finews.gtimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1648129736&t=39504510ded5ff3af9d13037e608996a" id="smart-image" class="small"></img>
+  
 </body>
 
 </html>
