--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://www.adalab.cn/admission.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <script src="thumbnail.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/@waline/client"></script>
 </head>
+
 
 <body>
   <header>
@@ -37,7 +39,14 @@
     <a href="https://www.zhihu.com/people/wu-liang-fan-ben-ben" target="_blank">CGTN</a> for <a href="https://www.adalab.cn" target="_blank">Adalab</a>
   </footer>
   <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Finews.gtimg.com%2Fnewsapp_match%2F0%2F11310183870%2F0.jpg&refer=http%3A%2F%2Finews.gtimg.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1648129736&t=39504510ded5ff3af9d13037e608996a" id="smart-image" class="small"></img>
-  
+  <div id="waline" class="comment_wrapper"></div>
+
+   <script>
+    Waline({
+      el: '#waline',
+      serverURL: 'https://your-domain.vercel.app',
+    });
+  </script>
 </body>
 
 </html>
